--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
+   background-image: url('images/backdrop.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: #000;
+  color: #f5f5f5;
 }
 .hero {
     height: 100vh;
