--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-   background-image: url('images/backdrop.jpg');
+   background-image: url('images/backdrop.jpg.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
